test/sema/exercise/struct_variable_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}
struct S2 {}

fn main(): void {
  let x: S = S {};
  let y: S = S2 {};
  // CHECK: [[# @LINE - 1 ]]:14: error: initializer type mismatch
}
